[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/playerGrey_up1.png" type="Texture" id=1]
[ext_resource path="res://art/playerGrey_up2.png" type="Texture" id=2]
[ext_resource path="res://art/playerGrey_walk2.png" type="Texture" id=3]
[ext_resource path="res://art/playerGrey_walk1.png" type="Texture" id=4]
[ext_resource path="res://scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://scenes/DialogueUI.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=2]
radius = 54.0
height = 28.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimatedSprite2D" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "up"

[node name="ShowDialogueTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Dialogue" type="Node2D" parent="."]
z_index = 4

[node name="DialogueUI" parent="Dialogue" instance=ExtResource( 6 )]
margin_left = -36.0
margin_top = -120.0
margin_right = -36.0
margin_bottom = -120.0

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShowDialogueTimer" to="." method="_on_ShowDialogueTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
